Security improvements: mandatory user_id, JWT validation, rate limiting, audit logging
- Make user_id parameter mandatory (not Optional) in all repository methods
  * photo_repository.py: user_id required in get_by_id, get_by_hash, get_photos, count_photos
  * author_repository.py: user_id required in get_by_id, get_by_name, get_all, count_all
  * import_session_repository.py: user_id required in all methods
  * Strengthens data isolation and prevents accidental access across users

- Add JWT SECRET_KEY validation in config.py
  * Validates SECRET_KEY is not default value when DISABLE_AUTH=False
  * Prints error and exits if default key detected in production
  * Prevents security vulnerability from default secrets

- Add slowapi for rate limiting
  * 5 registrations per hour per IP
  * 10 login attempts per minute per IP
  * Protects against brute force and abuse

- Add comprehensive audit logging
  * New audit_logger.py utility with AuditAction enum
  * Logs user registrations, logins, and failed attempts
  * Includes timestamp, user info, IP address, and details
  * Security events logged to audit.log file

Target environment: Single database, max 10 users

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
+    "slowapi>=0.1.9",
     "sqlalchemy>=2.0.43",
     "uvicorn[standard]>=0.37.0",
     "psycopg2-binary>=2.9.9",
